# duckdb-duckpond

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
.dg/: telemetry.yaml
.github/: copilot-instructions.md
.tmp_dagster_home_q8a4bocy/history/: runs.db
.tmp_dagster_home_q8a4bocy/history/runs/: .db  03b6d326-74bf-47ad-abdc-a9b2ffa941ae.db  baff4b02-24d3-4de8-abc6-6146427f6a11.db  index.db
.tmp_dagster_home_q8a4bocy/schedules/: schedules.db
sql/: duckpond_dashboard_playbook.sql
src/dagster_duckdb_datalake/: __init__.py  definitions.py  duckpond.py
src/dagster_duckdb_datalake/defs/: __init__.py  demo_assets.py
tests/: __init__.py  test_definitions_smoke.py  test_duckpond.py
