# File Purpose:
# - What this file is: Python packaging and project tool configuration.
# - Why it is relevant: it declares runtime/dev dependencies and build metadata.
# - Role in architecture: this is the environment contract that makes the code
#   runnable and reproducible across machines.

[project]
name = "dagster_duckdb_datalake"
requires-python = ">=3.10,<3.15"
version = "0.1.0"
dependencies = [
    "dagster==1.12.17",
    "duckdb",
    "pandas",
    "pyarrow",
    "sqlescapy",
    "lxml",
    "html5lib",
    "pytest"
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "dagster_duckdb_datalake"
registry_modules = [
    "dagster_duckdb_datalake.components.*",
]


